# agentwatch

./: .gitignore  AgentWatch Setup.command  AgentWatch.command  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Open AgentWatch App.command  Open AgentWatch Windows App.bat  README.md  README_CN.md  RELEASE_NOTES_v0.8.0.md  SECURITY.md  TODO.md  config.example.json  install_claude_hooks.sh  pyproject.toml  uninstall_claude_hooks.sh
agentwatch/: __init__.py  classifier.py  cli.py  config.py  desktop.py  event_parser.py  message_builder.py  notifier.py  persona.py  policy.py  presence.py  store.py  utils.py
linux/: agentwatch-monitor.sh  agentwatch.desktop  install_desktop_entry.sh  setup.sh
macos/: build_app.sh
macos/AgentWatchMenuBar/: Package.swift
macos/AgentWatchMenuBar/Sources/AgentWatchMenuBar/: main.swift
scripts/: simulate_event.py  test_push.py
windows/: build_app.ps1  install_claude_hooks_windows.ps1  setup_windows.ps1  uninstall_claude_hooks_windows.ps1
windows/AgentWatchTray/: AgentWatchTray.csproj  Program.cs
